--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,28 +46,33 @@
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <form action="/login" method="post">
-            <!-- <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+
+
+            <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
               <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-              <button type="button" class="btn btn-primary btn-floating mx-1">
-                <i class="fab fa-facebook-f"></i>
+              <button type="button" class="btn btn-dark btn-floating mx-1">
+                <!-- <a href="/auth/google" class="badge badge-dark">Google</a> -->
+                <a href="/auth/google" class="alert-link">Google</a>
+
               </button>
   
-              <button type="button" class="btn btn-primary btn-floating mx-1">
+              <!-- <button type="button" class="btn btn-primary btn-floating mx-1">
                 <i class="fab fa-twitter"></i>
               </button>
   
               <button type="button" class="btn btn-primary btn-floating mx-1">
                 <i class="fab fa-linkedin-in"></i>
               </button>
-            </div>
+              -->
+            </div> 
   
             <div class="divider d-flex align-items-center my-4">
               <p class="text-center fw-bold mx-3 mb-0">Or</p>
-            </div> -->
+            </div>
   
             <!-- Email input -->
             <div class="form-outline mb-4">
-              <input type="email" name="email" id="form3Example3" class="form-control form-control-lg"
+              <input type="email" name="username" id="form3Example3" class="form-control form-control-lg"
                 placeholder="Enter a valid email address" />
               <label class="form-label" for="form3Example3">Email address</label>
             </div>
