--- a/views/register.ejs
+++ b/views/register.ejs
@@ -51,18 +51,18 @@
   
                   <form class="mx-1 mx-md-4" action="/register" method = "post">
   
-                    <div class="d-flex flex-row align-items-center mb-4">
+                    <!-- <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="text" name = "name" id="form3Example1c" class="form-control" />
                         <label class="form-label" for="form3Example1c">Your Name</label>
                       </div>
-                    </div>
+                    </div> -->
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-                        <input type="email" name = "email" id="form3Example3c" class="form-control" />
+                        <input type="email" name = "username" id="form3Example3c" class="form-control" />
                         <label class="form-label" for="form3Example3c">Your Email</label>
                       </div>
                     </div>
@@ -86,6 +86,30 @@
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button type="submits" class="btn btn-dark btn-lg btn-lg">Register</button>
                     </div>
+
+                    <div class="divider d-flex align-items-center my-4">
+                      <p class="text-center fw-bold mx-3 mb-0">Or</p>
+                    </div>
+
+                    <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                      <p class="lead fw-normal mb-0 me-3">Sign in with</p>
+                      <button type="button" class="btn btn-dark btn-floating mx-1">
+                        <!-- <a href="/auth/google" class="badge badge-dark">Google</a> -->
+                        <a href="/auth/google" class="alert-link">Google</a>
+        
+                      </button>
+          
+                      <!-- <button type="button" class="btn btn-primary btn-floating mx-1">
+                        <i class="fab fa-twitter"></i>
+                      </button>
+          
+                      <button type="button" class="btn btn-primary btn-floating mx-1">
+                        <i class="fab fa-linkedin-in"></i>
+                      </button>
+                      -->
+                    </div> 
+          
+                    
   
                   </form>
   
