--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,5 +1,5 @@
 <%- include("header") -%>
-
+<!-- <img src="todo-logo.png" alt=""  style="padding-left: 1%; padding-top: 1%;" height="90px" width="90px"> -->
 <a href="/logout" style="text-align: center; padding-left: 90%; padding-bottom: 100px;">logout</a>
 
     <div class="box" id="heading">
