--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,7 +49,8 @@
 
 
             <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-              <p class="lead fw-normal mb-0 me-3">Sign in with</p>
+              <img src="todo-logo.png" alt=""  style="padding: 3%;" height="100px" width="100px">
+              <span class="lead fw-normal mb-0 me-3">Sign in with</span>
               <button type="button" class="btn btn-dark btn-floating mx-1">
                 <!-- <a href="/auth/google" class="badge badge-dark">Google</a> -->
                 <a href="/auth/google" class="alert-link">Google</a>
