--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,7 +37,6 @@
   <body class="text-center">
     
 
-
 <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -46,8 +45,10 @@
             <div class="card-body p-md-5">
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-  
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+
+                  <img src="todo-logo.png" alt=""  height="100px" width="100px">
+
+                  <span class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</span>
   
                   <form class="mx-1 mx-md-4" action="/register" method = "post">
   
@@ -58,8 +59,10 @@
                         <label class="form-label" for="form3Example1c">Your Name</label>
                       </div>
                     </div> -->
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
+
+                    
+
+                    <div class="d-flex flex-row align-items-center mb-4" style="padding: 3%;">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="email" name = "username" id="form3Example3c" class="form-control" />
