--- a/views/sublist.ejs
+++ b/views/sublist.ejs
@@ -124,6 +124,7 @@ footer {
     <title>ToDoList</title>
 </head>
 <body>
+<!-- <img src="todo-logo.png" alt=""  style="padding-left: 1%; padding-top: 1%;" height="90px" width="90px"> -->
 
 <a href="/logout" style="text-align: center; padding-left: 90%; padding-bottom: 100px;">logout</a>
 
